shesmu-server/src/test/resources/bad/extra-action-param.shesmu
Input gsi_std;


Define standard_fastq(string s)
  Where workflow == {"BamQC 2.7+", 3 }[0]
  Where metatype == "chemical/fastq-gzip"
  Where path == foo[file_size];

Run fastqc
  Matches standard_fastq("a")
  Group files = path By accession, donor
  With {
    memory = 4Gi,
    input = files,
    undefined = 3
  }
